# test-cargo

randon-crate/: Cargo.toml
randon-crate/src/: main.rs
sig-provider/: Cargo.toml
sig-provider/sig-provider/: Cargo.toml
sig-provider/sig-provider-proto/: Cargo.toml
sig-provider/sig-provider-proto/src/: lib.rs
sig-provider/sig-provider/src/: main.rs
smart-contract-verifier/: Cargo.toml
smart-contract-verifier/smart-contract-verifier/: Cargo.toml
smart-contract-verifier/smart-contract-verifier-server/: Cargo.toml
smart-contract-verifier/smart-contract-verifier/src/: lib.rs
